# karpathy_nlp

./: ChatGPT.txt  Commands.txt  LLM_UseCases.txt  main.py  pyproject.toml
BigramModel/: bigrams.ipynb
GPT2/: fineweb.py  hellaswag.py  play.ipynb  train_gpt2.py  train_gpt2_loadwts.py  train_gpt2_weights_compile.py  train_gpt2_weights_flashattention.py  train_gpt2_weights_grad_accumulation.py  train_gpt2_weights_grad_dataset.py  train_gpt2_weights_grad_dataset_validation.py  train_gpt2_weights_grad_ddp.py  train_gpt2_weights_hp.py  train_gpt2_weights_scratch.py
GPT2/log/: log.txt
GPT_Basic/: gpt_dev.ipynb
GPT_Tokenizer/: Tokenization.ipynb  tok400.model
MLPModel/: mlp.ipynb
MLPModel_Activations_Gradients_BathNorm/: Readme.md  makemore_part3_bn.ipynb
MLPModel_BackPropogation/: build_makemore_backprop_ninja.ipynb
MLPModel_Wavenet/: makemore_part5.ipynb  makemore_part5_cnn1.ipynb
